# consciousness

./: run.py~
0.0.1/: .run.py.un~  run.py
0.0.1/app/: .models.py.un~
0.0.1/app/templates/: index.html
0.0.2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
0.0.2/engine/ai_subsystem/: ai.py
0.0.2/engine/core/: engine.cpp
0.0.2/engine/user_subsystem/: user.py
0.0.2/engine/world_subsystem/: world.cpp  world.h
app/: .views.py.un~
app/static/: .main.css.un~  main.css  main.css~
app/templates/: .index.html.un~  index.html~
